diesel_compile_tests/tests/fail/sqlite_upsert_cannot_be_used_on_pg.stderr
error[E0277]: `diesel::query_builder::insert_statement::private::Replace` is no valid SQL fragment for the `Pg` backend
  --> tests/fail/sqlite_upsert_cannot_be_used_on_pg.rs:21:18
   |
21 |         .execute(&mut connection);
   |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::insert_statement::private::Replace`, which is required by `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, &i32>>>,), users::table>, diesel::query_builder::insert_statement::private::Replace>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Pg` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::insert_statement::private::Replace as QueryFragment<Mysql>>
             <diesel::query_builder::insert_statement::private::Replace as QueryFragment<Sqlite>>
   = note: required for `InsertStatement<table, ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<id, ...>>,), ...>, ...>` to implement `QueryFragment<Pg>`
   = note: required for `InsertStatement<table, ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<id, ...>>,), ...>, ...>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
